<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_list_projects"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black"
        android:title="@string/projects"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_list_news"
        android:enabled="true"
        android:icon="@drawable/ic_new_releases_black"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_list_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_date_range_black"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
</menu>